data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4371.wast
;; 10. **Test Description**:    - Construct a test where `br_if`'s conditional check influences `call_indirect` to either trigger a trap due to boundary violations or succeed with a valid table index; assessing `br_if`'s reliability in branch evaluation before `call_indirect` execution.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (func $br_if_test
      (local i32)
      (local.set 0 (i32.const 1))
      (br_if 0 (i32.const 0))
      (call_indirect (type 0) (local.get 0))
    )
  )
  "type mismatch"
)